fix bug-truncate

--- a/resources/assets/sass/pages/home/_informationsection.scss
+++ b/resources/assets/sass/pages/home/_informationsection.scss
@@ -243,9 +243,12 @@
                 }
     
                 @media screen and (max-width: 530px) {
-                    width: 100%;
-                    font-size: 14px;
-                    line-height: 22px;
+                    @include excerpt(
+                        $font-size: 14px, 
+                        $line-height: 1.4, 
+                        $lines-to-show: 4,
+                        $excerpt-bg: #fff
+                    );
                 }
     
                 @media screen and (max-width: 360px) {
